# mobile_manipulation

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: pre-commit.yml
mm_assets/: package.xml  setup.cfg  setup.py
mm_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mm_control/scripts/: generate_acados_code.py
mm_control/src/mm_control/: MPC.py  MPCBase.py  MPCConstraints.py  MPCCostFunctions.py  map.py  robot.py
mm_control/tests/: test_robot_model.py
mm_plan/: package.xml  setup.cfg  setup.py
mm_run/: package.xml  setup.cfg  setup.py
mm_run/config/: 3d_collision.yaml  3d_collision_sdf.yaml  configuration.md  self_collision_avoidance.yaml  simple_experiment.yaml
mm_run/launch/: controller.launch.py  pybullet_sim.launch.py  run_pybullet_sim.launch.py
mm_run/nodes/: isaac_sim_ros.py  mpc_ros.py  planner_test_ros.py  sim_ros.py
mm_run/rviz/: mm_basic.rviz
mm_run/scripts/: experiment.py
mm_simulator/: package.xml  setup.cfg  setup.py
mm_utils/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mm_utils/scripts/: plot_logs.py
mmseq_assets/: CMakeLists.txt  package.xml
mmseq_assets/launch/: view_model.launch
mmseq_assets/thing/: compile_xacro.sh
mmseq_control/: CMakeLists.txt  package.xml  setup.py
mmseq_control/scripts/: map_tester.py  mpc_constraint_tester.py  mpc_cost_fcn_tester.py  sdf_tester.py
mmseq_control_new/: CMakeLists.txt  package.xml  setup.py
mmseq_control_new/scripts/: mpc_generate_c_code.py  test_SO3.py  test_constraints.py  test_cost_functions.py  test_mpc.py  test_mpc.yaml
mmseq_plan/: CMakeLists.txt  package.xml  setup.py
mmseq_run/: CMakeLists.txt  package.xml
mmseq_run/config/: 2d_collision.yaml  2d_collision_sdf.yaml  3d_collision.yaml  3d_collision_sdf.yaml  benchmark.yaml  (+5 more)
mmseq_simulator/: CMakeLists.txt  package.xml  setup.py
mmseq_utils/: CMakeLists.txt  package.xml  setup.py
tools/: setup_acados.sh
ur_description/: CMakeLists.txt  package.xml
(+328 files in other folders)
